maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (isFacingWall()) {
  ^