maze.pledge.PledgeMaze.scala.code
override def run() {
  var dir:Direction=Direction.NORTH;
  var angle=0;
  setDirection(Dirction.NORTH)
  while (!isOverBaggle()) {
    while (!isFacingWall()) {
      forward()
    }
    right(); angle+=1
    while (angle!=0) {
      keepHandOnSide()
    }
  }
}

def keepHandOnSideWall():Boolean {
  if (isFacingWall()) {
    right();angle+=1
  }
  else {
    forward; left(); angle-=1
    
  }
}